<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.gbif</groupId>
        <artifactId>motherpom</artifactId>
        <version>56</version>
    </parent>

    <artifactId>name-parser-motherpom</artifactId>
    <version>4.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>GBIF Name Parser Project</name>
    <description>GBIF Name Parser</description>
    <url>https://github.org/gbif/name-parser</url>

    <scm>
        <connection>scm:git:git@github.com:gbif/name-parser.git</connection>
        <url>https://github.com/gbif/name-parser</url>
        <developerConnection>scm:git:git@github.com:gbif/name-parser.git</developerConnection>
        <tag>HEAD</tag>
    </scm>

    <modules>
        <module>name-parser</module>
        <module>name-parser-api</module>
        <module>name-parser-v1</module>
    </modules>

    <properties>
        <java.version>11</java.version>
        <!-- GBIF Motherpom -->
        <release.tagNameBase>name-parser</release.tagNameBase>
        <main.basedir>${project.basedir}</main.basedir>

        <!-- Dependency versions -->
        <commons-io.version>2.16.1</commons-io.version>
        <commons-lang.version>3.15.0</commons-lang.version>
        <fastutil.version>8.5.13</fastutil.version>
        <findbugs-jsr305.version>3.0.2</findbugs-jsr305.version>
        <gbif-api.version>1.16.5</gbif-api.version>
        <gson.version>2.11.0</gson.version>
        <guava.version>33.0.0-jre</guava.version>
        <junit.version>4.13.2</junit.version>
        <!-- last logback version to support the SLF4J 1.7 series -->
        <logback.version>1.2.13</logback.version>
        <slf4j.version>1.7.36</slf4j.version>
    </properties>

    <developers>
        <developer>
            <name>Markus Döring</name>
            <email>mdoering@gbif.org</email>
        </developer>
    </developers>

    <repositories>
        <repository>
            <id>gbif-all</id>
            <url>https://repository.gbif.org/content/groups/gbif</url>
        </repository>
        <repository>
            <id>gbif-thirdparty</id>
            <url>https://repository.gbif.org/content/repositories/thirdparty/</url>
        </repository>
    </repositories>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.google.code.gson</groupId>
                <artifactId>gson</artifactId>
                <version>${gson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.code.findbugs</groupId>
                <artifactId>jsr305</artifactId>
                <version>${findbugs-jsr305.version}</version>
            </dependency>
            <dependency>
                <groupId>org.gbif</groupId>
                <artifactId>name-parser</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.gbif</groupId>
                <artifactId>name-parser-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.gbif</groupId>
                <artifactId>name-parser-gbif</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- GBIF -->
            <dependency>
                <groupId>org.gbif</groupId>
                <artifactId>gbif-api</artifactId>
                <version>${gbif-api.version}</version>
            </dependency>

            <!-- Logging -->
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j.version}</version>
            </dependency>

            <!-- Other -->
            <dependency>
                <groupId>it.unimi.dsi</groupId>
                <artifactId>fastutil</artifactId>
                <version>${fastutil.version}</version>
            </dependency>
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>${commons-io.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${commons-lang.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${guava.version}</version>
            </dependency>

            <!-- Test -->
            <dependency>
                <groupId>org.gbif</groupId>
                <artifactId>name-parser-api</artifactId>
                <version>${project.version}</version>
                <classifier>tests</classifier>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-classic</artifactId>
                <version>${logback.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

</project>
